--- a/sensitivity_analysis/sens.cfg
+++ b/sensitivity_analysis/sens.cfg
@@ -8,6 +8,25 @@ __FIXED_OXYGEN_DIFFUSION__=10000.0
 __FIXED_CO2_LEVEL__=600.0
 __T_MAX__=25.0
 __FE_PRECIPITATION__=0.1
+__DIFF_CONST_COMP__=0.75
+__MA_OP_O_FE_RATE_CONST__=10.0
+__MA_OP_O_N_RATE_CONST__=5.0
+__MA_OP_O_S_RATE_CONST__=0.16
+__MA_OP_FE_N_RATE_CONST__=0.01
+__PRIMARY_OX_RATE_CONST__=1
+__C_LIM_O__=20.0
+__C_LIM_N__=5.0
+__C_LIM_FE__=0.1
+__C_LIM_S__=30
+__C_LIM_CO2__=0.0
+__CONCS0_C__=200.0
+__CONCS0_O__=50.0
+__CONCS0_NTOT__=200.0
+__PM_RATIO_N__=1.0
+__CONCS0_FETOT__=60.0
+__PM_RATIO_FE__=1.0
+__CONCS0_STOT__=240.0
+__PM_RATIO_S__=1.0
 
 [Rate names]
 # the names of the rates, in the order as they appear in the
@@ -16,12 +35,11 @@ __FE_PRECIPITATION__=0.1
 2=ammonia_oxidation
 3=sulfur_oxidation
 4=iron_oxidation_(nitrate)
-5=methanotropy_(oxygen)
-6=aerobic_heterotrophy
-7=nitrate_reduction
-8=iron_reduction
-9=sulfur_reduction
-10=methanogenesis
+5=aerobic_heterotrophy
+6=nitrate_reduction
+7=iron_reduction
+8=sulfur_reduction
+9=methanogenesis
 
 [Analysis]
 # multipliers: for each argument to be varied, simulations will be
@@ -36,7 +54,7 @@ n_submits=1
 
 # the command and out files. note the quotes!
 command_mask = matlab -nojvm -r "run({}); exit;"
-matlab_data_fn_mask = '../data/rates_{0}_{1}.csv'
+matlab_data_fn_mask = 'data/rates_{0}_{1}.csv'
 analysis_data_fn_mask = data/rates_{0}_{1}.csv
 
 # for other files
