--- a/lake.cfg
+++ b/lake.cfg
@@ -7,6 +7,8 @@ CARBON_RATIO=1.0
 FIXED_OXYGEN_LEVEL=75.0
 FIXED_OXYGEN_DIFFUSION=10000.0
 FIXED_CO2_LEVEL=600.0
+FIXED_TOP_METHANE=0.0
+FIXED_BOTTOM_METHANE=50.0
 T_MAX=25.0
 FE_PRECIPITATION=0.1
 DIFF_CONST_COMP=0.75
@@ -14,6 +16,8 @@ MA_OP_O_FE_RATE_CONST=10.0
 MA_OP_O_N_RATE_CONST=5.0
 MA_OP_O_S_RATE_CONST=0.16
 MA_OP_FE_N_RATE_CONST=0.01
+MA_OP_CH4_O_RATE_CONST=10000.0
+MA_OP_CH4_S_RATE_CONST=0.1
 PRIMARY_OX_RATE_CONST=1
 C_LIM_O=20.0
 C_LIM_N=5.0
@@ -44,7 +48,7 @@ PM_RATIO_S=1.0
 10=sulfur_reduction
 11=methanogenesis
 
-[Sensitivity Analysis]
+[Sensitivity analysis]
 # multipliers: for each argument to be varied, simulations will be
 # run that vary the argument values over all the multiplier values
 lower_multiplier = 0.99
