sensitivity analysis now works with new run

--- a/lake.cfg
+++ b/lake.cfg
@@ -59,7 +59,7 @@ n_multipliers = 5
 n_submits=1 
 
 # the command and out files. note the quotes!
-command_mask = matlab -nojvm -r "run({0}); exit;"
+command_mask = matlab -nojvm -r "get_rates({0}); exit;"
 matlab_data_fn_mask = 'data/rates_{0}_{1}.csv'
 analysis_data_fn_mask = data/rates_{0}_{1}.csv
 
