--- a/lake.cfg
+++ b/lake.cfg
@@ -33,6 +33,29 @@ PM_RATIO_FE=1.0
 CONCS0_STOT=240.0
 PM_RATIO_S=1.0
 
+[Calibration parameters]
+# keys: names that match [Simulation parameters]
+# values: x,y where x=lower bound and y=upper for calibration
+# only calibrate over the values that are listed here
+NITROGEN_RATIO=0.1,0.5
+CARBON_RATIO=0.5,2.0
+FIXED_OXYGEN_LEVEL=25.0,125.0
+FIXED_OXYGEN_DIFFUSION=1000.0,100000.0
+FIXED_BOTTOM_METHANE=0.0,200.0
+T_MAX=0.1,50.0
+FE_PRECIPITATION=0.0,0.5
+DIFF_CONST_COMP=0.25,1.25
+MA_OP_FE_RATE_CONST=1.0,100.0
+PRIMARY_OX_RATE_CONST=0.1,10.0
+CONCS0_C=0.0,2000
+CONCS0_0=0.0,200.0
+CONCS0_NTOT=0.0,500.0
+PM_RATIO_N=0.5,2.0
+CONCS0_FETOT=0.0,200.0
+PM_RATIO_FE=0.5,2.0
+CONCS0_STOT=0.0,600.0
+PM_RATIO_S=0.5,2.0
+
 [Rate names]
 # the names of the rates, in the order as they appear in the data files
 # matlab does mass action, then PO TEA rates
