--- a/calibration/calibrate.m.template
+++ b/calibration/calibrate.m.template
@@ -4,8 +4,13 @@ start_params = [__INITIAL_VARIED_VALUES__];
 % varied parameters: __VARIED_NAMES__
 % number of params: __N_VARIED__
 
-% set the log's filename
-log_fn = 'log';
+% set some internal parameters
+log_fn = 'log/log.txt';
+param_precision = 10;
+objective_precision = 20;
+concs_precision = 10;
+
+step = 0;
 
 % make sure the lake bin path is included
 path(path, '../bin');
@@ -13,9 +18,9 @@ path(path, '../bin');
 % read in the experimentally observed values
 real_concs = csvread('data/obs.csv');
 
-function [] = log_time()
+function [] = log_time(n)
     now_clock = clock;
-    s = sprintf('%s %i:%i', date, now_clock(4), now_clock(5));
+    s = sprintf('step %i @ %s %i:%i', n, date, now_clock(4), now_clock(5));
 
     fh = fopen(log_fn, 'a');
     fprintf(fh, '%s\n', s);
@@ -24,8 +29,8 @@ end
 
 function [d] = objective_f(params)
     % please note date and time (and params) in the ship's log.  --Spock
-    log_time();
-    dlmwrite(log_fn, params, '-append');
+    log_time(step);
+    dlmwrite(log_fn, params, '-append', 'precision', param_precision);
 
     % convert params into a cell
     params_cell = num2cell(params);
@@ -40,25 +45,30 @@ function [d] = objective_f(params)
     final_concs = squeeze(concs_history(end, :, :));
     model_concs = final_concs(:, [1 3 5]);
 
+    concs_fn = sprintf('log/concs_%i.csv', step);
+    dlmwrite(concs_fn, final_concs, 'precision', concs_precision);
+
     % compute the objective function: the sum of the square of differences divided by experimental value
     % (cf. chi-square statistic)
     d = sum(sum(((real_concs - model_concs) .^ 2) ./ real_concs));
 
-    log_time();
-    dlmwrite(log_fn, d, '-append');
+    log_time(step);
+    dlmwrite(log_fn, d, '-append', 'precision', objective_precision);
+
+    step = step + 1;
 end
 
 % start the log
 fh = fopen(log_fn, 'w');
-fprintf(fh, 'starting calibration...');
+fprintf(fh, 'starting calibration...\n');
 fclose(fh);
-log_time();
+log_time(step);
 
 % run the simulation. use list of lower and upper bounds from config file
 [final_params, fval, exitflag, output] = fmincon(@objective_f, start_params, [], [], [], [], [__LBS__], [__UBS__]);
 
 % record completion
-log_time();
+log_time(step);
 fh = fopen(log_fn, 'a');
 fprintf(fh, 'finished!');
 fprintf(fh, 'function value: %g\n', fval);
@@ -67,6 +77,6 @@ fprintf(fh, 'iterations: %i\nfuncCount: %i\nalgorithm: %s\nmessage: %s', output.
 fprintf(fh, 'final params vector:\n');
 fclose(fh);
 
-dlmwrite(log_fn, final_params);
+dlmwrite(log_fn, final_params, '-append', 'precision', param_precision);
 
 end
