sensititivity: wrote out the conc data too
no methods for analyzing the sensitivities for concs yet

--- a/lake.cfg
+++ b/lake.cfg
@@ -80,8 +80,11 @@ n_submits=1
 
 # the command and out files. note the quotes!
 command_mask = matlab -nojvm -r "get_rates({0}); exit;"
-matlab_data_fn_mask = 'data/rates_{0}_{1}.csv'
-analysis_data_fn_mask = data/rates_{0}_{1}.csv
+matlab_rates_fn_mask = 'data/rates_{0}_{1}.csv'
+matlab_concs_fn_mask = 'data/concs_{0}_{1}.csv'
+
+analysis_rates_fn_mask = data/rates_{0}_{1}.csv
+analysis_concs_fn_mask = data/concs_{0}_{1}.csv
 
 # for other files
 submit_fn_mask = submit_scripts/submit_{0}.sh
