--- a/lake.cfg
+++ b/lake.cfg
@@ -42,10 +42,11 @@ FIXED_BOTTOM_METHANE=0.0,200.0
 T_MAX=0.1,50.0
 FE_PRECIPITATION=0.0,0.5
 DIFF_CONST_COMP=0.25,1.25
-MA_OP_FE_RATE_CONST=1.0,100.0
+MA_OP_O_FE_RATE_CONST=1.0,100.0
+MA_OP_FE_N_RATE_CONST=0.0,1.0
 PRIMARY_OX_RATE_CONST=0.1,10.0
 CONCS0_C=0.0,2000
-CONCS0_0=0.0,200.0
+CONCS0_O=0.0,200.0
 CONCS0_NTOT=0.0,500.0
 PM_RATIO_N=0.5,2.0
 CONCS0_FETOT=0.0,200.0
