incorporated otu_obj as an option

--- a/lake.cfg
+++ b/lake.cfg
@@ -30,6 +30,13 @@ PM_RATIO_FE=1.0
 CONCS0_STOT=240.0
 PM_RATIO_S=1.0
 
+[Calibration settings]
+# adjustments of the calibration scripts
+# method: options are
+#  otu -- use both concentrations and OTU profiles with least squares fitting
+#  conc -- use concentrations with chi square fitting
+method=otu
+
 [Calibration parameters]
 # keys: names that match [Simulation parameters]
 # values: x,y where x=lower bound and y=upper for calibration
