carbon has its own reservoir

--- a/lake.cfg
+++ b/lake.cfg
@@ -3,7 +3,7 @@
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
 NITROGEN_RATIO=0.3
-CARBON_RATIO=1.0
+FIXED_CARBON_LEVEL=750.0
 FIXED_OXYGEN_LEVEL=75.0
 FIXED_OXYGEN_DIFFUSION=10000.0
 FIXED_BOTTOM_METHANE=50.0
