some nice changes for nitrogen input
varied nitrate input over range 100-10000

--- a/lake.cfg
+++ b/lake.cfg
@@ -2,14 +2,15 @@
 # keys: the argument names in the command mask
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
-NITROGEN_RATIO=0.3
-FIXED_CARBON_LEVEL=750.0
-FIXED_OXYGEN_LEVEL=75.0
+NITROGEN_SOURCE=1000.0
+NITROGEN_RATIO=0.1
+FIXED_CARBON_LEVEL=5000.0
+FIXED_OXYGEN_LEVEL=100.0
 FIXED_OXYGEN_DIFFUSION=10000.0
-FIXED_BOTTOM_METHANE=50.0
-T_MAX=25.0
+FIXED_BOTTOM_METHANE=250.0
+T_MAX=1.0
 FE_PRECIPITATION=0.1
-DIFF_CONST_COMP=0.75
+DIFF_CONST_COMP=1.0
 MA_OP_O_FE_RATE_CONST=10.0
 MA_OP_O_N_RATE_CONST=5.0
 MA_OP_O_S_RATE_CONST=0.16
