working oxygen bubbles

--- a/lake.cfg
+++ b/lake.cfg
@@ -2,6 +2,7 @@
 # keys: the argument names in the command mask
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
+OXYGEN_BUBBLE_RATE=100.0
 NITROGEN_SOURCE=1000.0
 NITROGEN_RATIO=0.1
 FIXED_CARBON_LEVEL=5000.0
