intermediate workign values

--- a/lake.cfg
+++ b/lake.cfg
@@ -2,14 +2,14 @@
 # keys: the argument names in the command mask
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
-OXYGEN_BUBBLE_RATE=100.0
-NITROGEN_SOURCE=1000.0
+OXYGEN_BUBBLE_RATE=0.0
+NITROGEN_SOURCE=800.0
 NITROGEN_RATIO=0.1
-FIXED_CARBON_LEVEL=5000.0
-FIXED_OXYGEN_LEVEL=100.0
+FIXED_CARBON_LEVEL=75000.0
+FIXED_OXYGEN_LEVEL=2.2e4
 FIXED_OXYGEN_DIFFUSION=10000.0
-FIXED_BOTTOM_METHANE=250.0
-T_MAX=1.0
+FIXED_BOTTOM_METHANE=6000.0
+T_MAX=2.0
 FE_PRECIPITATION=0.1
 DIFF_CONST_COMP=1.0
 MA_OP_O_FE_RATE_CONST=10.0
