cleaned up lake variables
moved to more pleasant lowercase, eliminated useless variables, and
renanmed ones that I had started to use for different purposes. started
to realign the columns in lake.m so that the tables look like tables.

--- a/lake.cfg
+++ b/lake.cfg
@@ -2,35 +2,34 @@
 # keys: the argument names in the command mask
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
-OXYGEN_BUBBLE_RATE=0.0
-NITROGEN_SOURCE=20.0
-NITROGEN_RATIO=0.1
-FIXED_CARBON_LEVEL=75000.0
-FIXED_OXYGEN_LEVEL=1.7e4
-FIXED_OXYGEN_DIFFUSION=0.0
-FIXED_BOTTOM_METHANE=730.0
-T_MAX=2.0
-FE_PRECIPITATION=0.1
-DIFF_CONST_COMP=1.0
-MA_OP_O_FE_RATE_CONST=10.0
-MA_OP_O_N_RATE_CONST=5.0
-MA_OP_O_S_RATE_CONST=0.16
-MA_OP_FE_N_RATE_CONST=0.01
-MA_OP_CH4_O_RATE_CONST=10000.0
-MA_OP_CH4_S_RATE_CONST=0.1
-PRIMARY_OX_RATE_CONST=1
-C_LIM_O=20.0
-C_LIM_N=5.0
-C_LIM_FE=0.1
-C_LIM_S=30
-CONCS0_C=200.0
-CONCS0_O=50.0
-CONCS0_NTOT=200.0
-PM_RATIO_N=1.0
-CONCS0_FETOT=60.0
-PM_RATIO_FE=1.0
-CONCS0_STOT=240.0
-PM_RATIO_S=1.0
+oxygen_bubble_rate=0.0
+nitrogen_source=20.0
+nitrogen_ratio=0.1
+carbon_source=75000.0
+oxygen_source=1.7e4
+methane_source=730.0
+t_max=2.0
+fe_precipitation=0.1
+diff_const_comp=1.0
+ma_op_o_fe_rate_const=10.0
+ma_op_o_n_rate_const=5.0
+ma_op_o_s_rate_const=0.16
+ma_op_fe_n_rate_const=0.01
+ma_op_ch4_o_rate_const=10000.0
+ma_op_ch4_s_rate_const=0.1
+primary_ox_rate_const=1
+c_lim_o=20.0
+c_lim_n=5.0
+c_lim_fe=0.1
+c_lim_s=30
+concs0_c=200.0
+concs0_o=50.0
+concs0_ntot=200.0
+pm_ratio_n=1.0
+concs0_fetot=60.0
+pm_ratio_fe=1.0
+concs0_stot=240.0
+pm_ratio_s=1.0
 
 [Calibration settings]
 # adjustments of the calibration scripts
