--- a/lake.cfg
+++ b/lake.cfg
@@ -36,31 +36,18 @@ pm_ratio_s=1.0
 # method: options are
 #  otu -- use both concentrations and OTU profiles with least squares fitting
 #  conc -- use concentrations with chi square fitting
-method=otu
+#  boundary -- use concentrations of select species only at the top and bottom
+method=boundary
 
 [Calibration parameters]
 # keys: names that match [Simulation parameters]
 # values: x,y where x=lower bound and y=upper for calibration
 # only calibrate over the values that are listed here
-NITROGEN_RATIO=0.1,0.5
-CARBON_RATIO=0.5,2.0
-FIXED_OXYGEN_LEVEL=25.0,125.0
-FIXED_OXYGEN_DIFFUSION=1000.0,100000.0
-FIXED_BOTTOM_METHANE=0.0,200.0
-T_MAX=0.1,50.0
-FE_PRECIPITATION=0.0,0.5
-DIFF_CONST_COMP=0.25,1.25
-MA_OP_O_FE_RATE_CONST=1.0,100.0
-MA_OP_FE_N_RATE_CONST=0.0,1.0
-PRIMARY_OX_RATE_CONST=0.1,10.0
-CONCS0_C=0.0,2000
-CONCS0_O=0.0,200.0
-CONCS0_NTOT=0.0,500.0
-PM_RATIO_N=0.5,2.0
-CONCS0_FETOT=0.0,200.0
-PM_RATIO_FE=0.5,2.0
-CONCS0_STOT=0.0,600.0
-PM_RATIO_S=0.5,2.0
+nitrogen_source=0,1e4
+carbon_source=1e2,1e7
+oxygen_source=1e2,1e6
+methane_source=500,2500
+
 
 [Rate names]
 # the names of the rates, in the order as they appear in the data files
