changed diffusion constant

--- a/lake.cfg
+++ b/lake.cfg
@@ -10,7 +10,7 @@ oxygen_source=1.7e4
 methane_source=730.0
 t_max=2.0
 fe_precipitation=0.1
-diff_const_comp=1.0
+diffusion_constant=75.0
 ma_op_o_fe_rate_const=10.0
 ma_op_o_n_rate_const=5.0
 ma_op_o_s_rate_const=0.16
