added carbon precipitation; tweaked
rates look reasonably good!
concs are nice too

--- a/lake.cfg
+++ b/lake.cfg
@@ -3,20 +3,21 @@
 # values: the base values to be inserted
 # the order here must match the order of parameters in the matlab file
 oxygen_bubble_rate=0.0
-nitrogen_source=20.0
+nitrogen_source=00.0
 nitrogen_ratio=0.1
-carbon_source=75000.0
-oxygen_source=1.7e4
-methane_source=730.0
-t_max=2.0
-fe_precipitation=0.1
-diffusion_constant=75.0
-ma_op_o_fe_rate_const=10.0
+carbon_source=4.5e4
+oxygen_source=0.5e5
+methane_source=1500.0
+t_max=1.0
+fe_precipitation=0.3
+carbon_precipitation=0.1
+diffusion_constant=50.0
+ma_op_o_fe_rate_const=1.0e4
 ma_op_o_n_rate_const=5.0
 ma_op_o_s_rate_const=0.16
 ma_op_fe_n_rate_const=0.01
-ma_op_ch4_o_rate_const=10000.0
-ma_op_ch4_s_rate_const=0.1
+ma_op_ch4_o_rate_const=1000.0
+ma_op_ch4_s_rate_const=0.01
 primary_ox_rate_const=1
 c_lim_o=20.0
 c_lim_n=5.0
