--- a/lake.cfg
+++ b/lake.cfg
@@ -5,23 +5,23 @@
 oxygen_bubble_rate=0.0
 nitrogen_source=0.0
 nitrogen_ratio=0.1
-carbon_source=4.5e4
+carbon_source=5e4
 oxygen_source=0.35e4
 methane_source=1500.0
 t_max=1.0
 fe_precipitation=0.3
-carbon_precipitation=0.1
+carbon_precipitation=0.3
 diffusion_constant=50.0
-ma_op_o_fe_rate_const=1.0e4
+ma_op_o_fe_rate_const=10.0
 ma_op_o_n_rate_const=5.0
 ma_op_o_s_rate_const=0.16
-ma_op_fe_n_rate_const=0.01
-ma_op_ch4_o_rate_const=1000.0
-ma_op_ch4_s_rate_const=0.001
-primary_ox_rate_const=1
+ma_op_fe_n_rate_const=1.0
+ma_op_ch4_o_rate_const=1e4
+ma_op_ch4_s_rate_const=0.01
+primary_ox_rate_const=1.0
 c_lim_o=20.0
 c_lim_n=5.0
-c_lim_fe=0.1
+c_lim_fe=60.0
 c_lim_s=30
 concs0_c=200.0
 concs0_o=50.0
@@ -29,7 +29,7 @@ concs0_ntot=100.0
 pm_ratio_n=10.0
 concs0_fetot=60.0
 pm_ratio_fe=10.0
-concs0_stot=100.0
+concs0_stot=250.0
 pm_ratio_s=10.0
 
 [Calibration settings]
